Moreyball: Final Draft

--- a/moreyball-final-draft.ipynb
+++ b/moreyball-final-draft.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5da447d2",
+   "id": "d1acaa20",
    "metadata": {
     "papermill": {
-     "duration": 0.004324,
-     "end_time": "2025-11-18T21:19:23.440910",
+     "duration": 0.004478,
+     "end_time": "2025-11-18T21:27:12.265088",
      "exception": false,
-     "start_time": "2025-11-18T21:19:23.436586",
+     "start_time": "2025-11-18T21:27:12.260610",
      "status": "completed"
     },
     "tags": []
@@ -46,13 +46,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7c6ab1f",
+   "id": "d3ff0111",
    "metadata": {
     "papermill": {
-     "duration": 0.003224,
-     "end_time": "2025-11-18T21:19:23.447799",
+     "duration": 0.003677,
+     "end_time": "2025-11-18T21:27:12.272229",
      "exception": false,
-     "start_time": "2025-11-18T21:19:23.444575",
+     "start_time": "2025-11-18T21:27:12.268552",
      "status": "completed"
     },
     "tags": []
@@ -65,19 +65,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aba2f571",
+   "id": "cacd464c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:23.456884Z",
-     "iopub.status.busy": "2025-11-18T21:19:23.456142Z",
-     "iopub.status.idle": "2025-11-18T21:19:25.310405Z",
-     "shell.execute_reply": "2025-11-18T21:19:25.309305Z"
+     "iopub.execute_input": "2025-11-18T21:27:12.279905Z",
+     "iopub.status.busy": "2025-11-18T21:27:12.279632Z",
+     "iopub.status.idle": "2025-11-18T21:27:13.962678Z",
+     "shell.execute_reply": "2025-11-18T21:27:13.961690Z"
     },
     "papermill": {
-     "duration": 1.860418,
-     "end_time": "2025-11-18T21:19:25.311746",
+     "duration": 1.688561,
+     "end_time": "2025-11-18T21:27:13.964069",
      "exception": false,
-     "start_time": "2025-11-18T21:19:23.451328",
+     "start_time": "2025-11-18T21:27:12.275508",
      "status": "completed"
     },
     "tags": []
@@ -103,13 +103,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d51714e",
+   "id": "513fbf2d",
    "metadata": {
     "papermill": {
-     "duration": 0.004707,
-     "end_time": "2025-11-18T21:19:25.320220",
+     "duration": 0.003037,
+     "end_time": "2025-11-18T21:27:13.970554",
      "exception": false,
-     "start_time": "2025-11-18T21:19:25.315513",
+     "start_time": "2025-11-18T21:27:13.967517",
      "status": "completed"
     },
     "tags": []
@@ -122,19 +122,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7542e2cd",
+   "id": "8cec9d59",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:25.328852Z",
-     "iopub.status.busy": "2025-11-18T21:19:25.328453Z",
-     "iopub.status.idle": "2025-11-18T21:19:26.092819Z",
-     "shell.execute_reply": "2025-11-18T21:19:26.091866Z"
+     "iopub.execute_input": "2025-11-18T21:27:13.978041Z",
+     "iopub.status.busy": "2025-11-18T21:27:13.977633Z",
+     "iopub.status.idle": "2025-11-18T21:27:14.638080Z",
+     "shell.execute_reply": "2025-11-18T21:27:14.636970Z"
     },
     "papermill": {
-     "duration": 0.770968,
-     "end_time": "2025-11-18T21:19:26.094824",
+     "duration": 0.666598,
+     "end_time": "2025-11-18T21:27:14.640250",
      "exception": false,
-     "start_time": "2025-11-18T21:19:25.323856",
+     "start_time": "2025-11-18T21:27:13.973652",
      "status": "completed"
     },
     "tags": []
@@ -163,19 +163,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e5ecabd8",
+   "id": "cbb2bcda",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:26.103877Z",
-     "iopub.status.busy": "2025-11-18T21:19:26.103586Z",
-     "iopub.status.idle": "2025-11-18T21:19:26.154181Z",
-     "shell.execute_reply": "2025-11-18T21:19:26.153189Z"
+     "iopub.execute_input": "2025-11-18T21:27:14.649579Z",
+     "iopub.status.busy": "2025-11-18T21:27:14.649196Z",
+     "iopub.status.idle": "2025-11-18T21:27:14.696323Z",
+     "shell.execute_reply": "2025-11-18T21:27:14.695433Z"
     },
     "papermill": {
-     "duration": 0.056901,
-     "end_time": "2025-11-18T21:19:26.155668",
+     "duration": 0.053018,
+     "end_time": "2025-11-18T21:27:14.697572",
      "exception": false,
-     "start_time": "2025-11-18T21:19:26.098767",
+     "start_time": "2025-11-18T21:27:14.644554",
      "status": "completed"
     },
     "tags": []
@@ -650,19 +650,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bd46f43b",
+   "id": "7d23d9ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:26.165772Z",
-     "iopub.status.busy": "2025-11-18T21:19:26.165501Z",
-     "iopub.status.idle": "2025-11-18T21:19:26.207125Z",
-     "shell.execute_reply": "2025-11-18T21:19:26.206174Z"
+     "iopub.execute_input": "2025-11-18T21:27:14.706327Z",
+     "iopub.status.busy": "2025-11-18T21:27:14.706083Z",
+     "iopub.status.idle": "2025-11-18T21:27:14.742026Z",
+     "shell.execute_reply": "2025-11-18T21:27:14.741245Z"
     },
     "papermill": {
-     "duration": 0.048488,
-     "end_time": "2025-11-18T21:19:26.208643",
+     "duration": 0.04173,
+     "end_time": "2025-11-18T21:27:14.743246",
      "exception": false,
-     "start_time": "2025-11-18T21:19:26.160155",
+     "start_time": "2025-11-18T21:27:14.701516",
      "status": "completed"
     },
     "tags": []
@@ -1136,13 +1136,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa715eec",
+   "id": "722583e8",
    "metadata": {
     "papermill": {
-     "duration": 0.004637,
-     "end_time": "2025-11-18T21:19:26.218248",
+     "duration": 0.004122,
+     "end_time": "2025-11-18T21:27:14.752027",
      "exception": false,
-     "start_time": "2025-11-18T21:19:26.213611",
+     "start_time": "2025-11-18T21:27:14.747905",
      "status": "completed"
     },
     "tags": []
@@ -1155,19 +1155,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2b1d4dc6",
+   "id": "049a1c9f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:26.229700Z",
-     "iopub.status.busy": "2025-11-18T21:19:26.228897Z",
-     "iopub.status.idle": "2025-11-18T21:19:26.972950Z",
-     "shell.execute_reply": "2025-11-18T21:19:26.972155Z"
+     "iopub.execute_input": "2025-11-18T21:27:14.761686Z",
+     "iopub.status.busy": "2025-11-18T21:27:14.761411Z",
+     "iopub.status.idle": "2025-11-18T21:27:15.446189Z",
+     "shell.execute_reply": "2025-11-18T21:27:15.445339Z"
     },
     "papermill": {
-     "duration": 0.751257,
-     "end_time": "2025-11-18T21:19:26.974388",
+     "duration": 0.691224,
+     "end_time": "2025-11-18T21:27:15.447562",
      "exception": false,
-     "start_time": "2025-11-18T21:19:26.223131",
+     "start_time": "2025-11-18T21:27:14.756338",
      "status": "completed"
     },
     "tags": []
@@ -1242,19 +1242,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c801f9d6",
+   "id": "11cafa29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:26.985968Z",
-     "iopub.status.busy": "2025-11-18T21:19:26.985702Z",
-     "iopub.status.idle": "2025-11-18T21:19:27.181723Z",
-     "shell.execute_reply": "2025-11-18T21:19:27.180824Z"
+     "iopub.execute_input": "2025-11-18T21:27:15.458615Z",
+     "iopub.status.busy": "2025-11-18T21:27:15.458327Z",
+     "iopub.status.idle": "2025-11-18T21:27:15.639900Z",
+     "shell.execute_reply": "2025-11-18T21:27:15.639058Z"
     },
     "papermill": {
-     "duration": 0.203389,
-     "end_time": "2025-11-18T21:19:27.183164",
+     "duration": 0.188523,
+     "end_time": "2025-11-18T21:27:15.641170",
      "exception": false,
-     "start_time": "2025-11-18T21:19:26.979775",
+     "start_time": "2025-11-18T21:27:15.452647",
      "status": "completed"
     },
     "tags": []
@@ -1291,13 +1291,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc037df1",
+   "id": "45551960",
    "metadata": {
     "papermill": {
-     "duration": 0.005508,
-     "end_time": "2025-11-18T21:19:27.195961",
+     "duration": 0.005177,
+     "end_time": "2025-11-18T21:27:15.652969",
      "exception": false,
-     "start_time": "2025-11-18T21:19:27.190453",
+     "start_time": "2025-11-18T21:27:15.647792",
      "status": "completed"
     },
     "tags": []
@@ -1319,19 +1319,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d4fae276",
+   "id": "82238d6a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:27.209351Z",
-     "iopub.status.busy": "2025-11-18T21:19:27.209010Z",
-     "iopub.status.idle": "2025-11-18T21:19:27.521458Z",
-     "shell.execute_reply": "2025-11-18T21:19:27.520612Z"
+     "iopub.execute_input": "2025-11-18T21:27:15.665506Z",
+     "iopub.status.busy": "2025-11-18T21:27:15.665084Z",
+     "iopub.status.idle": "2025-11-18T21:27:15.956366Z",
+     "shell.execute_reply": "2025-11-18T21:27:15.955208Z"
     },
     "papermill": {
-     "duration": 0.321374,
-     "end_time": "2025-11-18T21:19:27.523483",
+     "duration": 0.299428,
+     "end_time": "2025-11-18T21:27:15.957922",
      "exception": false,
-     "start_time": "2025-11-18T21:19:27.202109",
+     "start_time": "2025-11-18T21:27:15.658494",
      "status": "completed"
     },
     "tags": []
@@ -1435,19 +1435,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "15c11423",
+   "id": "cf15708a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:27.542082Z",
-     "iopub.status.busy": "2025-11-18T21:19:27.541727Z",
-     "iopub.status.idle": "2025-11-18T21:19:27.748115Z",
-     "shell.execute_reply": "2025-11-18T21:19:27.747199Z"
+     "iopub.execute_input": "2025-11-18T21:27:15.972191Z",
+     "iopub.status.busy": "2025-11-18T21:27:15.971703Z",
+     "iopub.status.idle": "2025-11-18T21:27:16.166009Z",
+     "shell.execute_reply": "2025-11-18T21:27:16.165181Z"
     },
     "papermill": {
-     "duration": 0.215671,
-     "end_time": "2025-11-18T21:19:27.749673",
+     "duration": 0.202079,
+     "end_time": "2025-11-18T21:27:16.167327",
      "exception": false,
-     "start_time": "2025-11-18T21:19:27.534002",
+     "start_time": "2025-11-18T21:27:15.965248",
      "status": "completed"
     },
     "tags": []
@@ -1487,13 +1487,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c7f6ad3",
+   "id": "dc7f7d5b",
    "metadata": {
     "papermill": {
-     "duration": 0.007366,
-     "end_time": "2025-11-18T21:19:27.764552",
+     "duration": 0.006598,
+     "end_time": "2025-11-18T21:27:16.181604",
      "exception": false,
-     "start_time": "2025-11-18T21:19:27.757186",
+     "start_time": "2025-11-18T21:27:16.175006",
      "status": "completed"
     },
     "tags": []
@@ -1506,19 +1506,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6e8d0d3a",
+   "id": "931ab22c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:27.781108Z",
-     "iopub.status.busy": "2025-11-18T21:19:27.780834Z",
-     "iopub.status.idle": "2025-11-18T21:19:27.824391Z",
-     "shell.execute_reply": "2025-11-18T21:19:27.823281Z"
+     "iopub.execute_input": "2025-11-18T21:27:16.197043Z",
+     "iopub.status.busy": "2025-11-18T21:27:16.196345Z",
+     "iopub.status.idle": "2025-11-18T21:27:16.234116Z",
+     "shell.execute_reply": "2025-11-18T21:27:16.233290Z"
     },
     "papermill": {
-     "duration": 0.053782,
-     "end_time": "2025-11-18T21:19:27.825837",
+     "duration": 0.046707,
+     "end_time": "2025-11-18T21:27:16.235341",
      "exception": false,
-     "start_time": "2025-11-18T21:19:27.772055",
+     "start_time": "2025-11-18T21:27:16.188634",
      "status": "completed"
     },
     "tags": []
@@ -1781,19 +1781,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "822af99c",
+   "id": "d240b084",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:27.843084Z",
-     "iopub.status.busy": "2025-11-18T21:19:27.842782Z",
-     "iopub.status.idle": "2025-11-18T21:19:28.060283Z",
-     "shell.execute_reply": "2025-11-18T21:19:28.059498Z"
+     "iopub.execute_input": "2025-11-18T21:27:16.250811Z",
+     "iopub.status.busy": "2025-11-18T21:27:16.250546Z",
+     "iopub.status.idle": "2025-11-18T21:27:16.455197Z",
+     "shell.execute_reply": "2025-11-18T21:27:16.454325Z"
     },
     "papermill": {
-     "duration": 0.228199,
-     "end_time": "2025-11-18T21:19:28.062095",
+     "duration": 0.213922,
+     "end_time": "2025-11-18T21:27:16.456661",
      "exception": false,
-     "start_time": "2025-11-18T21:19:27.833896",
+     "start_time": "2025-11-18T21:27:16.242739",
      "status": "completed"
     },
     "tags": []
@@ -1837,19 +1837,19 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b56ae859",
+   "id": "cc06d375",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-18T21:19:28.080793Z",
-     "iopub.status.busy": "2025-11-18T21:19:28.080494Z",
-     "iopub.status.idle": "2025-11-18T21:19:28.308160Z",
-     "shell.execute_reply": "2025-11-18T21:19:28.307196Z"
+     "iopub.execute_input": "2025-11-18T21:27:16.474704Z",
+     "iopub.status.busy": "2025-11-18T21:27:16.474065Z",
+     "iopub.status.idle": "2025-11-18T21:27:16.674861Z",
+     "shell.execute_reply": "2025-11-18T21:27:16.674123Z"
     },
     "papermill": {
-     "duration": 0.239564,
-     "end_time": "2025-11-18T21:19:28.310523",
+     "duration": 0.211577,
+     "end_time": "2025-11-18T21:27:16.676559",
      "exception": false,
-     "start_time": "2025-11-18T21:19:28.070959",
+     "start_time": "2025-11-18T21:27:16.464982",
      "status": "completed"
     },
     "tags": []
@@ -1893,13 +1893,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae03793f",
+   "id": "224c12b7",
    "metadata": {
     "papermill": {
-     "duration": 0.010079,
-     "end_time": "2025-11-18T21:19:28.330726",
+     "duration": 0.008347,
+     "end_time": "2025-11-18T21:27:16.694254",
      "exception": false,
-     "start_time": "2025-11-18T21:19:28.320647",
+     "start_time": "2025-11-18T21:27:16.685907",
      "status": "completed"
     },
     "tags": []
@@ -1927,13 +1927,15 @@
    "accelerator": "none",
    "dataSources": [
     {
+     "databundleVersionId": 6169227,
      "datasetId": 1218020,
      "sourceId": 6090760,
      "sourceType": "datasetVersion"
     },
     {
+     "databundleVersionId": 14307532,
      "datasetId": 1177523,
-     "sourceId": 12431563,
+     "sourceId": 13578327,
      "sourceType": "datasetVersion"
     }
    ],
@@ -1962,14 +1964,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.812977,
-   "end_time": "2025-11-18T21:19:28.860124",
+   "duration": 9.691981,
+   "end_time": "2025-11-18T21:27:17.221703",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-11-18T21:19:18.047147",
+   "start_time": "2025-11-18T21:27:07.529722",
    "version": "2.6.0"
   }
  },
